cmake_minimum_required(VERSION 3.21)
project(DuaWeChatLauncher)

set(ENV{QTDIR} "C:/Path/Qt")
set(QT_VERSION 6)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_CXX_STANDARD 17)
set(REQUIRED_LIBS Core Gui Widgets)
set(REQUIRED_LIBS_QUALIFIED Qt6::Core Qt6::Gui Qt6::Widgets)
set(CMAKE_PREFIX_PATH "$ENV{QTDIR}/6.6.0/mingw_64/")
message("QT6_DIR: $ENV{QTDIR}")

add_executable(${PROJECT_NAME} main.cpp ui/launcher.cpp ui/launcher.h ui/launcher.ui)
find_package(Qt${QT_VERSION} COMPONENTS ${REQUIRED_LIBS} REQUIRED)
target_link_libraries(${PROJECT_NAME} ${REQUIRED_LIBS_QUALIFIED} )